--- a/coming_soon.css
+++ b/coming_soon.css
@@ -6,11 +6,11 @@ body {
 
 #coming_soon {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
-  place-content: flex-end;
   flex-direction: column;
-  height: 90%;
+  position: absolute;
+  width: 100%;
+  bottom: 1rem;
 }
 
 img {
@@ -24,7 +24,7 @@ img {
   border-radius: 50%;
   margin-bottom: 2rem;
   position: absolute;
-  top: 1rem;
+  top: 2.5rem;
   border: 1px solid #fff;
   left: calc(50% - 75px);
 }
