Sistemato line-height titoli

--- a/css/styles.css
+++ b/css/styles.css
@@ -4367,6 +4367,7 @@ img.u-pull-left {
   text-transform: uppercase;
   font-size: 4rem;
   margin: 1rem;
+  line-height: 4rem;
 }
 .desc_progetto label {
   font-weight: 100;
